[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Fonts/FRUIT-PUNCH.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Button/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/Inter-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Audio/gameover.mp3" type="AudioStream" id=4]
[ext_resource path="res://Gameplay/Interface/Results.gd" type="Script" id=5]
[ext_resource path="res://Assets/white.png" type="Texture" id=6]
[ext_resource path="res://UI/blur.gdshader" type="Shader" id=7]
[ext_resource path="res://Assets/worm-dead.png" type="Texture" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.862745 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 1, 0.376471, 0.376471, 0.705882 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=3]
size = 70
outline_size = 5
outline_color = Color( 1, 0.223529, 0.223529, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Assets/Fonts/FRUIT-PUNCH.ttf"

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=7]
resource_name = "pulse"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1.5, 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.482353, 0.482353, 0.54902 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="InputEventAction" id=8]
action = "ui_accept"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=10]
action = "ui_cancel"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="Animation" id=12]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Blur:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 0.6, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Results" type="CenterContainer"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="TextureRect" parent="."]
material = SubResource( 1 )
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 162.0
margin_top = 75.0
margin_right = 862.0
margin_bottom = 525.0
rect_min_size = Vector2( 700, 450 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="Panel"]
margin_left = 23.0
margin_top = 59.0
margin_right = 678.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 3 )
text = "Game Over!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Panel"]
margin_left = 21.0
margin_top = 135.0
margin_right = 679.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 0.705882 )
text = "0m"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="Panel"]
margin_left = 190.0
margin_top = 209.941
margin_right = 679.0
margin_bottom = 275.941
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 0.54902 )
text = "Total jumps: 0
Powerups Collected: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel"]
modulate = Color( 1, 0.5932, 0.5932, 0.645591 )
margin_left = 392.474
margin_top = 205.26
margin_right = 1967.47
margin_bottom = 1189.26
rect_rotation = -15.6
rect_scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/TextureRect"]
autoplay = "pulse"
anims/pulse = SubResource( 7 )

[node name="PlayAgainButton" parent="Panel" instance=ExtResource( 2 )]
margin_left = 187.513
margin_top = 319.429
margin_right = 338.513
margin_bottom = 388.429
rect_pivot_offset = Vector2( -150.582, -308.97 )
hint_tooltip = "Play Again"
shortcut = SubResource( 9 )
text = "Play Again"

[node name="MainMenuButton" parent="Panel" instance=ExtResource( 2 )]
margin_left = 366.919
margin_top = 318.775
margin_right = 517.919
margin_bottom = 387.775
rect_pivot_offset = Vector2( -150.582, -308.97 )
hint_tooltip = "Main Menu"
shortcut = SubResource( 11 )
text = "Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "in"
anims/in = SubResource( 12 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
